finished writing header content on html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
     <title>Figma Design</title>
 </head>
 <body>
+    <header class="heading">
+        <nav class="nav-class">
+          <div class="menu">
+            <h3 class="menu-heading">BrandName</h3>
+            <div class="menu-link barss">
+              <p class="menu-p"><a href="" class="menu-a">Home</a></p>
+              <p class="menu-p"><a href="" class="menu-a">Product</a></p>
+              <p class="menu-p"><a href="" class="menu-a">Pricing</a></p>
+              <p class="menu-p"><ab href="" class="menu-a">Contact</ab></p>
+            </div>
+          </div>
+          <div class="icons">
+            <div class="right-menu barss">
+              <p><a href="" class="menu-a">Login</a></p>
+              <button class="menu-button">
+                Become a member <i class="fa fa-arrow-right"></i>
+              </button>
+            </div>
+            <p class="bars"><i class="fa fa-search"></i></p>
+            <p class="bars"><i class="fa fa-shopping-cart"></i></p>
+            <p class="bars"><i class="fa fa-bars"></i></p>
+          </div>
+        </nav>
   
 </body>
 </html>
