wrote the first section of the body

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Figma Design</title>
 </head>
 <body>
+    <!--Start of navbar-->
     <header class="heading">
         <nav class="nav-class">
           <div class="menu">
@@ -33,6 +34,41 @@
             <p class="bars"><i class="fa fa-bars"></i></p>
           </div>
         </nav>
-  
+        <!--End of navbar-->
+        <!--Start of Main-->
+        <div class="heading-2">
+            <div class="heading-home">
+              <div class="heading-class home-responsive">
+                <h2 class="heading-class-text">
+                  Financial Assistance With True Purpose
+                </h2>
+              </div>
+              <div class="heading-class home-responsive">
+                <h4 class="heading-h4-home">
+                  we know how object will act, <br />
+                  but things on small scale just do not act that way.
+                </h4>
+              </div>
+              <div class="button-home">
+                <div class="heading-class home-responsive">
+                  <button type="" class="heading-button-1 button-text">
+                    Get qoute now
+                  </button>
+                </div>
+                <div class="heading-class home-responsive">
+                  <button type="" class="heading-button-2">Learn More</button>
+                </div>
+              </div>
+            </div>
+    
+            <div class="heading-class">
+              <img
+                alt=""
+                src="assets/images/croods-user-interface.png"
+                class="crood-user-interface"
+              />
+            </div>
+        </div>
+    
 </body>
 </html>
