wrote the feature section of the body

--- a/index.html
+++ b/index.html
@@ -69,6 +69,88 @@
               />
             </div>
         </div>
-    
+    </header>
+    <!--Started the Feature's Section-->
+    <section class="feature">
+        <div>
+          <h2 class="text-feature-section">
+            Better Strategy With Quality Business
+          </h2>
+          <p class="paragraph-feature-section">
+            Problems trying to resolve the conflict between <br />
+            the two major realms of Classical physics: Newtonian mechanics
+          </p>
+        </div>
+        <div class="row-cards">
+          <div class="card-item">
+            <div class="flex-row-items flex-justify">
+              <img
+                src="assets/images/portrait.png"
+                alt="vector"
+                class="vector-card"
+              />
+              <p class="flex-row-paragraph card-item-p1">Investment Trading</p>
+            </div>
+          </div>
+          <div class="card-item stop">
+            <div class="flex-row-items flex-justify stop">
+              <img
+                src="assets/images/portrait.png"
+                alt="vector"
+                class="vector-card stop"
+              />
+              <p class="flex-row-paragraph card-item-p2 stop">
+                Support On Raising stop
+              </p>
+            </div>
+          </div>
+          <div class="card-item">
+            <div class="flex-row-items flex-justify">
+              <img
+                src="assets/images/portrait.png"
+                alt="vector"
+                class="vector-card rebase"
+              />
+              <p class="flex-row-paragraph card-item-p3">Financial Analysis</p>
+            </div>
+          </div>
+          <div class="card-item rebase">
+            <div class="flex-row-items flex-justify rebase">
+              <img
+                src="assets/images/portrait.png"
+                alt="vector"
+                class="vector-card rebase"
+              />
+              <p class="flex-row-paragraph card-item-p4 rebase">Taxation Planning</p>
+            </div>
+          </div>
+          <div class="card-item rebas">
+            <div class="flex-row-items flex-justify rebas">
+              <img
+                src="assets/images/portrait.png"
+                alt="vector"
+                class="vector-card"
+              />
+              <p class="flex-row-paragraph card-item-p5">rebase money and time</p>
+            </div>
+          </div>
+          <div class="card-item card-last-item base">
+            <div class="flex-row-items flex-justify base">
+              <img
+                src="assets/images/portrait.png"
+                alt="vector"
+                class="vector-card base"
+              />
+              <p class="flex-row-paragraph end-paragraph card-item-p6 base">
+                Outsourced Consulting base
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="buttons">
+          <button class="feature-button-1">Get Quote Now</button>
+          <button class="feature-button-2">Learn More</button>
+        </div>
+      </section>
 </body>
 </html>
