wrote the testimonials section of the body

--- a/index.html
+++ b/index.html
@@ -152,5 +152,40 @@
           <button class="feature-button-2">Learn More</button>
         </div>
       </section>
+      <!--End of features Section-->
+      <!--Started the testimonials Section-->
+      <section class="testimonials">
+        <div class="testimonial-content">
+          <h2 class="testimonials-heading">What Clients Say</h2>
+          <p class="testimonial-paragraph">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+        </div>
+        <div class="testimonail-card">
+          <div class="picture-container">
+            <img
+              src="assets/images/user-1.png"
+              alt="user-1"
+              class="testimonial-user-1"
+            />
+          </div>
+          <p class="testimonial-text">
+            Slate helps you see how many more days you need to work to reach your
+            financial goal for the month and year
+          </p>
+          <div class="rate">
+            <img src="assets/images/rate.png" alt="" class="testimonial-pic" />
+            <img src="assets/images/rate.png" alt="" class="testimonial-pic" />
+            <img src="assets/images/rate.png" alt="" class="testimonial-pic" />
+            <img src="assets/images/rate.png" alt="" class="testimonial-pic" />
+            <img src="assets/images/rate1.png" alt="" class="testimonial-pic" />
+            <h3 class="testimonial-author">Regina Miles</h3>
+            <h6 class="testimonial-design">Designer</h6>
+          </div>
+        </div>
+      </section>
+      <!--End of the Testimonials Section-->
+
 </body>
 </html>
