wrote the desktop FAQ section of the body

--- a/index.html
+++ b/index.html
@@ -186,6 +186,237 @@
         </div>
       </section>
       <!--End of the Testimonials Section-->
-
+    <!--Start of Faq Section -->
+    <section class="faq phone-faq">
+        <div class="faq-heading">
+          <h2 class="text-faq">FAQ</h2>
+          <p class="paragraph-faq">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+        </div>
+        <div class="card-faq">
+          <div class="card-faq-item">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right"
+            />
+            <div class="heading-faq">
+              <h5 class="heading-5-faq">the quick fox jumps over the lazy dog</h5>
+              <h6 class="heading-6-faq">Things on a very small scale ...</h6>
+            </div>
+          </div>
+          <div class="card-faq-item base">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right base"
+            />
+            <div class="heading-faq">
+              <h5 class="heading-5-faq">Financial Assistance project  Purpose</h5>
+              <h6 class="heading-6-faq">Things on a very small scale ...</h6>
+            </div>
+          </div>
+          <div class="card-faq-item">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right"
+            />
+            <div class="heading-faq base  browser">
+              <h5 class="heading-5-faq  browser"> browser follow these simple example</h5>
+              <h6 class="heading-6-faq  browser">Things on a very small scale ...</h6>
+            </div>
+          </div>
+          <div class="card-faq-item base  browser">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right  browser"
+            />
+            <div class="heading-faq">
+              <h5 class="heading-5-faq">the quick base jumps over the lazy dog</h5>
+              <h6 class="heading-6-faq">Change to the project directory ...</h6>
+            </div>
+          </div>
+          <div class="card-faq-item">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right"
+            />
+            <div class="heading-faq">
+              <h5 class="heading-5-faq">Change to the project directory lazy dog</h5>
+              <h6 class="heading-6-faq">Things on a project small scale ...</h6>
+            </div>
+          </div>
+          <div class="card-faq-item projec">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right projec"
+            />
+            <div class="heading-faq projec">
+              <h5 class="heading-5-faq">the quick Clone jumps over the lazy dog</h5>
+              <h6 class="heading-6-faq">Change to the project directory base ...</h6>
+            </div>
+          </div>
+          <div class="card-faq-item faq-total">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right"
+            />
+            <div class="heading-faq clone found">
+              <h5 class="heading-5-faq clone found">the quick fox jumps over base lazy dog</h5>
+              <h6 class="heading-6-faq clone found">Things on a clone found scale ...</h6>
+            </div>
+          </div>
+          <div class="card-faq-item faq-total clone found">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right clone found"
+            />
+            <div class="heading-faq">
+              <h5 class="heading-5-faq found">the Change to the Clone found</h5>
+              <h6 class="heading-6-faq">Things on a very Clone found ...</h6>
+            </div>
+          </div>
+          <div class="card-faq-item faq-total">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right"
+            />
+            <div class="heading-faq">
+              <h5 class="heading-5-faq found">the quick fox found over base lazy dog</h5>
+              <h6 class="heading-6-faq found">Things found very small scale ...</h6>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--End of Faq Section-->
+          <!-- Start of desktop FAQ -->
+    <section class="faq desktop-faq stop">
+        <div class="faq-heading stop">
+          <h2 class="text-faq stop">FAQ</h2>
+          <p class="paragraph-faq stop">
+            Problems trying to resolve the conflict between the two stop realms
+            run by opening the index.html
+          </p>
+        </div>
+        <div class="card-faq">
+          <div class="card-faq-item base2">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right"
+            />
+            <div class="heading-faq">
+              <h5 class="heading-5-faq">the base fox jumps over the lazy dog</h5>
+              <h6 class="heading-6-faq">Things on a very small scale 
+behave like nothing </h6>
+            </div>
+          </div>
+          <div class="card-faq-item">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right"
+            />
+            <div class="heading-faq">
+              <h5 class="heading-5-faq">the quick run by opening the index.html</h5>
+              <h6 class="heading-6-faq">Things on a very small scale 
+behave like nothing </h6>
+            </div>
+          </div>
+          <div class="card-faq-item stop-1">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right stop"
+            />
+            <div class="heading-faq">
+              <h5 class="heading-5-faq">the quick stop jumps over the lazy dog</h5>
+              <h6 class="heading-6-faq">run by opening the index.html behave like nothing </h6>
+            </div>
+          </div>
+          <div class="card-faq-item stop">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right stop"
+            />
+            <div class="heading-faq stop">
+              <h5 class="heading-5-faq">run by opening the index.html dog</h5>
+              <h6 class="heading-6-faq">Things on a very stop sbasee 
+                behave like</h6>
+            </div>
+          </div>
+          <div class="card-faq-item">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right"
+            />
+            <div class="heading-faq stop-5">
+              <h5 class="heading-5-faq">the quick fox jumps stop the lazy dog</h5>
+              <h6 class="heading-6-faq round">stop on a very found scale 
+behave like</h6>
+            </div>
+          </div>
+          <div class="card-faq-item round">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right round"
+            />
+            <div class="heading-faq round">
+              <h5 class="heading-5-faq round">the run by opening the index.html stop</h5>
+              <h6 class="heading-6-faq">Things on a very small round 
+behave like</h6>
+            </div>
+          </div>
+          <div class="card-faq-item faq-total">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right stop-2"
+            />
+            <div class="heading-faq">
+              <h5 class="heading-5-faq">the quick fox jumps over stop basedog</h5>
+              <h6 class="heading-6-faq">Things by opening the index.html
+behave like</h6>
+            </div>
+          </div>
+          <div class="card-faq-item faq-total base">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right stop-36"
+            />
+            <div class="heading-faq">
+              <h5 class="heading-5-faq very">stop quick fox jumps over the lazy dog</h5>
+              <h6 class="heading-6-faq very">Things on a very small very
+behave like</h6>
+            </div>
+          </div>
+          <div class="card-faq-item faq-total very">
+            <img
+              src="assets/images/arrow.png"
+              alt=""
+              class="fa fa-chevron-right very"
+            />
+            <div class="heading-faq">
+              <h5 class="heading-5-faq">the stop run by opening the max</h5>
+              <h6 class="heading-6-faq">Things on a very small scale 
+behave like</h6>
+            </div>
+          </div>
+        </div>
+      </section>
+    <!-- End of desktop FAQ -->
 </body>
 </html>
