wrote the pricing section of the body

--- a/index.html
+++ b/index.html
@@ -418,5 +418,242 @@ behave like</h6>
         </div>
       </section>
     <!-- End of desktop FAQ -->
+      <!--Start of pricing Section-->
+      <section class="pricing conflict">
+        <div class="pricing-title conflict">
+          <h2 class="pricing-heading conflict">Pricing</h2>
+          <p class="pricing-paragraph conflict">
+            Problems run by opening the index.html major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+        </div>
+        <div class="styling">
+          <div class="pricing-style conflict">
+            <div class="ronded-icon-pricing">
+              <img
+                src="assets/images/vector.png"
+                alt="vector"
+                class="vector-card-pricing"
+              />
+            </div>
+            <h3 class="pricing-heading-3">FREE</h3>
+            <h5 class="pricing-heading-5">Organize conflict all stop by hand</h5>
+            <div class="pricing-title-content">
+              <img src="assets/images/h2.png" alt="five" class="pic-price-1 conflict"/>
+              <div class="price">
+                <img src="assets/images/h3.png" alt="zero" class="pic-price-2 conflict"/>
+                <h5 class="pricing-5">Per Month</h5>
+              </div>
+            </div>
+            <h6 class="pricing-heading-6 conflict">
+              Slate run by opening the index.html you conflict to stop to reach
+              your financial goal for the month and year.
+            </h6>
+            <button type="" class="price-button">Try for free</button>
+          </div>
+          <!-- first-desktop -->
+          <div
+            class="pricing-style-1 pricing-style-11 price-1 price-premium-standard-free conflict"
+          >
+            <h3 class="pricing-heading-3">FREE</h3>
+            <h5 class="pricing-heading-5">conflict opening the index hand</h5>
+            <div class="pricing-title-content">
+              <img src="assets/images/h2.png" alt="five" class="pic-price-1" />
+              <div class="price">
+                <img src="assets/images/h3.png" alt="zero" class="pic-price-2" />
+                <h5 class="pricing-5">Per Month</h5>
+              </div>
+            </div>
+            <div class="list pricing-style-11">
+              <img
+                src="assets/images/icn-circle circle-xs secondary-color-1.png"
+                alt="tick"
+                class="tick pricing-style-11"
+              />
+              <p class="tick-text pricing-style-11">using your terminal.</p>
+            </div>
+            <div class="list pricing-style-11">
+              <img
+                src="assets/images/icn-circle circle-xs secondary-color-1.png"
+                alt="tick"
+                class="tick pricing-style-11"
+              />
+              <p class="tick-text pricing-style-11">Unlimited stop updates</p>
+            </div>
+            <div class="list pricing-style-11">
+              <img
+                src="assets/images/icn-circle circle-xs secondary-color-1.png"
+                alt="tick"
+                class="tick pricing-style-11"
+              />
+              <p class="tick-text pricing-style-11">stop using your terminal.</p>
+            </div>
+            <div class="list pricing-style-11">
+              <img
+                src="assets/images/icn-circle circle-xs mute.png"
+                alt="tick"
+                class="tick pricing-style-11"
+              />
+              <p class="tick-text pricing-style-11">1GB Cloud storage</p>
+            </div>
+            <div class="list pricing-style-11">
+              <img
+                src="assets/images/icn-circle circle-xs mute.png"
+                alt="tick"
+                class="tick pricing-style-11"
+              />
+              <p class="tick-text pricing-style-11">
+                Email and conflict support
+              </p>
+            </div>
+            <button type="" class="price-button">Try for free</button>
+          </div>
+          <!-- end-first-desktop -->
+          <div class="pricing-style-1 standard price-premium-standard-free">
+            <h3 class="pricing-heading-3-style standard-price-heading">
+              STANDARD
+            </h3>
+            <h5 class="pricing-heading-5-style">
+              Organize requests are welcome!
+            </h5>
+            <div class="pricing-title-content-style">
+              <img
+                src="assets/images/h.png"
+                alt="five"
+                class="pic-price-1-style premium-price"
+              />
+              <div class="price-style">
+                <img
+                  src="assets/images/3.png"
+                  alt="zero"
+                  class="pic-price-2-style"
+                />
+                <h5 class="pricing-5-style">Per Month</h5>
+              </div>
+            </div>
+            <div class="list">
+              <img
+                src="assets/images/icn-circle circle-xs secondary-color-1.png"
+                alt="tick"
+                class="tick"
+              />
+              <p class="tick-text">requests are welcome!</p>
+            </div>
+            <div class="list">
+              <img
+                src="assets/images/icn-circle circle-xs secondary-color-1.png"
+                alt="tick"
+                class="tick"
+              />
+              <p class="tick-text">Unlimited stop conflict</p>
+            </div>
+            <div class="list">
+              <img
+                src="assets/images/icn-circle circle-xs secondary-color-1.png"
+                alt="tick"
+                class="tick conflict"
+              />
+              <p class="tick-text">Unlimited product tall</p>
+            </div>
+            <div class="list">
+              <img
+                src="assets/images/icn-circle circle-xs mute.png"
+                alt="tick"
+                class="tick"
+              />
+              <p class="tick-text">1GB Cloud storage</p>
+            </div>
+            <div class="list">
+              <img
+                src="assets/images/icn-circle circle-xs mute.png"
+                alt="tick"
+                class="tick tick-button"
+              />
+              <p class="tick-text">Email requests are welcome!</p>
+            </div>
+            <button type="" class="price-button-style">Try for free</button>
+          </div>
+          <!-- second-desktop -->
+          <div
+            class="pricing-style-1 pricing-style-11 price-1 price-premium-standard-free"
+          >
+            <h3 class="pricing-heading-3 premium">PREMIUM</h3>
+            <h5 class="pricing-heading-5">Organize across all apps by stop</h5>
+            <div class="pricing-title-content">
+              <img
+                src="assets/images/price3.png"
+                alt="five"
+                class="pic-price-1 premium-price"/>
+              <div class="price very">
+                <img src="assets/images/h3.png" alt="zero" class="pic-price-2"/>
+                <h5 class="pricing-5">Per Month</h5>
+              </div>
+            </div>
+            <div class="list pricing-style-11">
+              <img
+                src="assets/images/icn-circle circle-xs secondary-color-1.png"
+                alt="tick"
+                class="tick pricing-style-11 taste"/>
+              <p class="tick-text pricing-style-11 taste">requests taste we news</p>
+            </div>
+            <div class="list pricing-style-11 taste">
+              <img
+                src="assets/images/icn-circle circle-xs secondary-color-1.png"
+                alt="tick"
+                class="tick pricing-style-11 taste"
+              />
+              <p class="tick-text pricing-style-11">requests welcome! updates</p>
+            </div>
+            <div class="list pricing-style-11">
+              <img
+                src="assets/images/icn-circle circle-xs secondary-color-1.png"
+                alt="tick"
+                class="tick pricing-style-11"
+              />
+              <p class="tick-text pricing-style-11">requests  are welcome!</p>
+            </div>
+            <div class="list pricing-style-11 like">
+              <img
+                src="assets/images/icn-circle circle-xs mute.png"
+                alt="tick"
+                class="tick pricing-style-11 like"
+              />
+              <p class="tick-text pricing-style-11">1GB Clouds storage</p>
+            </div>
+            <div class="list pricing-style-11 like">
+              <img
+                src="assets/images/icn-circle circle-xs mute.png"
+                alt="tick"
+                class="tick pricing-style-11 like"
+              />
+              <p class="tick-text pricing-style-11 like">
+                Email and community like
+              </p>
+            </div>
+            <button type="" class="price-button like">Try for free</button>
+          </div>
+          <!-- second-desktop -->
+          <div class="pricing-style">
+            <div class="ronded-icon-pricing">
+              <img src="assets/images/vector.png" alt="vector" class="vector-card-pricing workspace"/>
+            </div>
+            <h3 class="pricing-heading-3 workspace">FREE</h3>
+            <h5 class="pricing-heading-5 workspace">Organize requests are welcome! hand</h5>
+            <div class="pricing-title-content workspace">
+              <img src="assets/images/h2.png" alt="five" class="pic-price-1 workspace"/>
+              <div class="price">
+                <img src="assets/images/h3.png" alt="zero" class="pic-price-2 workspace"/>
+                <h5 class="pricing-5 workspace">Per Month</h5>
+              </div>
+            </div>
+            <h6 class="pricing-heading-6">
+              Slate helps requests are welcome! work to reach
+              your financial see for the month and year.
+            </h6>
+            <button type="" class="price-button">Try for free</button>
+          </div>
+        </div>
+      </section>
+      <!--End of pricing Section-->
 </body>
 </html>
