wrote the get in touch section of the body

--- a/index.html
+++ b/index.html
@@ -655,5 +655,22 @@ behave like</h6>
         </div>
       </section>
       <!--End of pricing Section-->
+          <!--Start of the Get in touch Section-->
+    <section class="in-touch">
+        <div class="in-touch-content">
+          <h2 class="in-touch-heading">Get In Touch</h2>
+          <p class="in-touch-paragraph">
+            The gradual accumulation  requests are welcome!-scale
+            behaviour during the first quarter of the 20th
+          </p>
+        </div>
+        <div class="form-control">
+          <input type="email" name="email" value="" placeholder="Your Email" /><i
+            class="btn btn-primary"
+            >Subscribe</i
+          >
+        </div>
+      </section>
+      <!--End of the get in touch Section-->
 </body>
 </html>
