wrote the footer section of the body

--- a/index.html
+++ b/index.html
@@ -672,5 +672,41 @@ behave like</h6>
         </div>
       </section>
       <!--End of the get in touch Section-->
+          <!-- Footer -->
+    <section class="footer-section footer-justify">
+        <div>
+          <h3>Get In Touch</h3>
+          <p class="first-footer-section">
+            the quick fox jumps see the lazy dog
+          </p>
+          <div class="footer-icons">
+            <p class="pic-footer"><img src="assets/images/f.png" alt="" /></p>
+            <p class="pic-footer"><img src="assets/images/i.png" alt="" /></p>
+            <p class="pic-footer"><img src="assets/images/t.png" alt="" /></p>
+          </div>
+        </div>
+        <div>
+          <h3>Company info</h3>
+          <p>About Us</p>
+          <p>Carrier</p>
+          <p>We are hiring</p>
+          <p>Blog</p>
+        </div>
+        <div>
+          <h3>Features</h3>
+          <p>Business Marketing</p>
+          <p>User Analytic</p>
+          <p>Live Chat</p>
+          <p>Unlimited Support</p>
+        </div>
+        <div>
+          <h3>Resources</h3>
+          <p>IOS &amp Android</p>
+          <p>Watch a Demo</p>
+          <p>Customers</p>
+          <p>API</p>
+        </div>
+      </section>
+      <!--End of footer-->
 </body>
 </html>
