--- a/index.html
+++ b/index.html
@@ -708,5 +708,9 @@ behave like</h6>
         </div>
       </section>
       <!--End of footer-->
+    <!-- Signature -->
+    <section class="last-part">
+        <p>Made With Love By Figmaland All Right Reserved, Represented by <b>clint360</b></p>
+      </section>
 </body>
 </html>
