added style to footer section

--- a/index.html
+++ b/index.html
@@ -709,8 +709,8 @@ behave like</h6>
       </section>
       <!--End of footer-->
     <!-- Signature -->
-    <section class="last-part">
-        <p>Made With Love By Figmaland All Right Reserved, Represented by <b>clint360</b></p>
+    <section class="signature">
+        <p>Made With Love By Figmaland All Right Reserved, Represented by <strong>clint360</strong></p>
       </section>
 </body>
 </html>
