final fix on lintbase

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ behave like nothing </h6>
           <div class="card-faq-item">
             <img
               src="assets/images/arrow.png"
-              alt=""
+              alt="home"
               class="fa fa-chevron-right"
             />
             <div class="heading-faq">
