final fix on font and appearance

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <title>Figma Design</title>
 </head>
 <body>
@@ -44,7 +45,7 @@
               </div>
               <div class="heading-class home-responsive">
                 <h4 class="heading-h4-home">
-                  we know how object will act, <br />
+                  We know how large objects will act, <br />
                   but things on small scale just do not act that way.
                 </h4>
               </div>
